lib/src/antlr/StellaParser.dart
// Generated from ./lib/src/antlr/StellaParser.g4 by ANTLR 4.13.2
// ignore_for_file: unused_import, unused_local_variable, prefer_single_quotes
import 'package:antlr4/antlr4.dart';

import 'StellaParserListener.dart';
import 'StellaParserBaseListener.dart';
import 'StellaParserVisitor.dart';
import 'StellaParserBaseVisitor.dart';
const int RULE_start_Program = 0, RULE_start_Expr = 1, RULE_start_Type = 2, 
          RULE_program = 3, RULE_languageDecl = 4, RULE_extension = 5, RULE_declaration = 6, 
          RULE_annotation = 7, RULE_paramDeclaration = 8, RULE_expression = 9, 
          RULE_patternBinding = 10, RULE_binding = 11, RULE_matchCase = 12, 
          RULE_pattern = 13, RULE_labelledPattern = 14, RULE_stellatype = 15, 
          RULE_recordFieldType = 16, RULE_variantFieldType = 17;
class StellaParser extends Parser {
  static final checkVersion = () => RuntimeMetaData.checkVersion('4.13.2', RuntimeMetaData.VERSION);
  static const int TOKEN_EOF = IntStream.EOF;

  static final List<DFA> _decisionToDFA = List.generate(
      _ATN.numberOfDecisions, (i) => DFA(_ATN.getDecisionState(i), i));
  static final PredictionContextCache _sharedContextCache = PredictionContextCache();
  static const int TOKEN_Surrogate_id_SYMB_0 = 1, TOKEN_Surrogate_id_SYMB_1 = 2, 
                   TOKEN_Surrogate_id_SYMB_2 = 3, TOKEN_Surrogate_id_SYMB_3 = 4, 
                   TOKEN_Surrogate_id_SYMB_4 = 5, TOKEN_Surrogate_id_SYMB_5 = 6, 
                   TOKEN_Surrogate_id_SYMB_6 = 7, TOKEN_Surrogate_id_SYMB_7 = 8, 
                   TOKEN_Surrogate_id_SYMB_8 = 9, TOKEN_Surrogate_id_SYMB_9 = 10, 
                   TOKEN_Surrogate_id_SYMB_10 = 11, TOKEN_Surrogate_id_SYMB_11 = 12, 
                   TOKEN_Surrogate_id_SYMB_12 = 13, TOKEN_Surrogate_id_SYMB_13 = 14, 
                   TOKEN_Surrogate_id_SYMB_14 = 15, TOKEN_Surrogate_id_SYMB_15 = 16, 
                   TOKEN_Surrogate_id_SYMB_16 = 17, TOKEN_Surrogate_id_SYMB_17 = 18, 
                   TOKEN_Surrogate_id_SYMB_18 = 19, TOKEN_Surrogate_id_SYMB_19 = 20, 
                   TOKEN_Surrogate_id_SYMB_20 = 21, TOKEN_Surrogate_id_SYMB_21 = 22, 
                   TOKEN_Surrogate_id_SYMB_22 = 23, TOKEN_Surrogate_id_SYMB_23 = 24, 
                   TOKEN_Surrogate_id_SYMB_24 = 25, TOKEN_Surrogate_id_SYMB_25 = 26, 
                   TOKEN_Surrogate_id_SYMB_26 = 27, TOKEN_Surrogate_id_SYMB_27 = 28, 
                   TOKEN_Surrogate_id_SYMB_28 = 29, TOKEN_Surrogate_id_SYMB_29 = 30, 
                   TOKEN_Surrogate_id_SYMB_30 = 31, TOKEN_Surrogate_id_SYMB_31 = 32, 
                   TOKEN_Surrogate_id_SYMB_32 = 33, TOKEN_Surrogate_id_SYMB_33 = 34, 
                   TOKEN_Surrogate_id_SYMB_34 = 35, TOKEN_Surrogate_id_SYMB_35 = 36, 
                   TOKEN_Surrogate_id_SYMB_36 = 37, TOKEN_Surrogate_id_SYMB_37 = 38, 
                   TOKEN_Surrogate_id_SYMB_38 = 39, TOKEN_Surrogate_id_SYMB_39 = 40, 
                   TOKEN_Surrogate_id_SYMB_40 = 41, TOKEN_Surrogate_id_SYMB_41 = 42, 
                   TOKEN_Surrogate_id_SYMB_42 = 43, TOKEN_Surrogate_id_SYMB_43 = 44, 
                   TOKEN_Surrogate_id_SYMB_44 = 45, TOKEN_Surrogate_id_SYMB_45 = 46, 
                   TOKEN_Surrogate_id_SYMB_46 = 47, TOKEN_Surrogate_id_SYMB_47 = 48, 
                   TOKEN_Surrogate_id_SYMB_48 = 49, TOKEN_Surrogate_id_SYMB_49 = 50, 
                   TOKEN_Surrogate_id_SYMB_50 = 51, TOKEN_Surrogate_id_SYMB_51 = 52, 
                   TOKEN_Surrogate_id_SYMB_52 = 53, TOKEN_Surrogate_id_SYMB_53 = 54, 
                   TOKEN_Surrogate_id_SYMB_54 = 55, TOKEN_Surrogate_id_SYMB_55 = 56, 
                   TOKEN_Surrogate_id_SYMB_56 = 57, TOKEN_Surrogate_id_SYMB_57 = 58, 
                   TOKEN_Surrogate_id_SYMB_58 = 59, TOKEN_Surrogate_id_SYMB_59 = 60, 
                   TOKEN_Surrogate_id_SYMB_60 = 61, TOKEN_Surrogate_id_SYMB_61 = 62, 
                   TOKEN_Surrogate_id_SYMB_62 = 63, TOKEN_Surrogate_id_SYMB_63 = 64, 
                   TOKEN_Surrogate_id_SYMB_64 = 65, TOKEN_Surrogate_id_SYMB_65 = 66, 
                   TOKEN_EXCEPTION = 67, TOKEN_VARIANT = 68, TOKEN_CAST = 69, 
                   TOKEN_ASSIGN = 70, TOKEN_REF_TYPE = 71, TOKEN_REFERENCE = 72, 
                   TOKEN_PANIC = 73, TOKEN_THROW = 74, TOKEN_TRY = 75, TOKEN_CATCH = 76, 
                   TOKEN_TOP_TYPE = 77, TOKEN_BOTTOM_TYPE = 78, TOKEN_AUTO_TYPE = 79, 
                   TOKEN_GENERIC = 80, TOKEN_FORALL = 81, TOKEN_COMMENT_antlr_builtin = 82, 
                   TOKEN_MULTICOMMENT_antlr_builtin = 83, TOKEN_StellaIdent = 84, 
                   TOKEN_ExtensionName = 85, TOKEN_MemoryAddress = 86, TOKEN_INTEGER = 87, 
                   TOKEN_WS = 88, TOKEN_ErrorToken = 89;

  @override
  final List<String> ruleNames = [
    'start_Program', 'start_Expr', 'start_Type', 'program', 'languageDecl', 
    'extension', 'declaration', 'annotation', 'paramDeclaration', 'expression', 
    'patternBinding', 'binding', 'matchCase', 'pattern', 'labelledPattern', 
    'stellatype', 'recordFieldType', 'variantFieldType'
  ];

  static final List<String?> _LITERAL_NAMES = [
      null, "','", "';'", "'('", "')'", "'{'", "'}'", "'='", "':'", "'->'", 
      "'=>'", "'|'", "'<|'", "'|>'", "'['", "']'", "'<'", "'<='", "'>'", 
      "'>='", "'=='", "'!='", "'+'", "'-'", "'*'", "'/'", "'.'", "'List::head'", 
      "'List::isempty'", "'List::tail'", "'Nat::pred'", "'Nat::iszero'", 
      "'Nat::rec'", "'Bool'", "'Nat'", "'Unit'", "'and'", "'as'", "'cons'", 
      "'core'", "'else'", "'extend'", "'false'", "'fix'", "'fn'", "'fold'", 
      "'if'", "'in'", "'inl'", "'inline'", "'inr'", "'language'", "'let'", 
      "'letrec'", "'match'", "'not'", "'or'", "'return'", "'succ'", "'then'", 
      "'throws'", "'true'", "'type'", "'unfold'", "'unit'", "'with'", "'\\u00B5'", 
      "'exception'", "'variant'", "'cast'", "':='", "'&'", "'new'", "'panic!'", 
      "'throw'", "'try'", "'catch'", "'Top'", "'Bot'", "'auto'", "'generic'", 
      "'forall'"
  ];
  static final List<String?> _SYMBOLIC_NAMES = [
      null, "Surrogate_id_SYMB_0", "Surrogate_id_SYMB_1", "Surrogate_id_SYMB_2", 
      "Surrogate_id_SYMB_3", "Surrogate_id_SYMB_4", "Surrogate_id_SYMB_5", 
      "Surrogate_id_SYMB_6", "Surrogate_id_SYMB_7", "Surrogate_id_SYMB_8", 
      "Surrogate_id_SYMB_9", "Surrogate_id_SYMB_10", "Surrogate_id_SYMB_11", 
      "Surrogate_id_SYMB_12", "Surrogate_id_SYMB_13", "Surrogate_id_SYMB_14", 
      "Surrogate_id_SYMB_15", "Surrogate_id_SYMB_16", "Surrogate_id_SYMB_17", 
      "Surrogate_id_SYMB_18", "Surrogate_id_SYMB_19", "Surrogate_id_SYMB_20", 
      "Surrogate_id_SYMB_21", "Surrogate_id_SYMB_22", "Surrogate_id_SYMB_23", 
      "Surrogate_id_SYMB_24", "Surrogate_id_SYMB_25", "Surrogate_id_SYMB_26", 
      "Surrogate_id_SYMB_27", "Surrogate_id_SYMB_28", "Surrogate_id_SYMB_29", 
      "Surrogate_id_SYMB_30", "Surrogate_id_SYMB_31", "Surrogate_id_SYMB_32", 
      "Surrogate_id_SYMB_33", "Surrogate_id_SYMB_34", "Surrogate_id_SYMB_35", 
      "Surrogate_id_SYMB_36", "Surrogate_id_SYMB_37", "Surrogate_id_SYMB_38", 
      "Surrogate_id_SYMB_39", "Surrogate_id_SYMB_40", "Surrogate_id_SYMB_41", 
      "Surrogate_id_SYMB_42", "Surrogate_id_SYMB_43", "Surrogate_id_SYMB_44", 
      "Surrogate_id_SYMB_45", "Surrogate_id_SYMB_46", "Surrogate_id_SYMB_47", 
      "Surrogate_id_SYMB_48", "Surrogate_id_SYMB_49", "Surrogate_id_SYMB_50", 
      "Surrogate_id_SYMB_51", "Surrogate_id_SYMB_52", "Surrogate_id_SYMB_53", 
      "Surrogate_id_SYMB_54", "Surrogate_id_SYMB_55", "Surrogate_id_SYMB_56", 
      "Surrogate_id_SYMB_57", "Surrogate_id_SYMB_58", "Surrogate_id_SYMB_59", 
      "Surrogate_id_SYMB_60", "Surrogate_id_SYMB_61", "Surrogate_id_SYMB_62", 
      "Surrogate_id_SYMB_63", "Surrogate_id_SYMB_64", "Surrogate_id_SYMB_65", 
      "EXCEPTION", "VARIANT", "CAST", "ASSIGN", "REF_TYPE", "REFERENCE", 
      "PANIC", "THROW", "TRY", "CATCH", "TOP_TYPE", "BOTTOM_TYPE", "AUTO_TYPE", 
      "GENERIC", "FORALL", "COMMENT_antlr_builtin", "MULTICOMMENT_antlr_builtin", 
      "StellaIdent", "ExtensionName", "MemoryAddress", "INTEGER", "WS", 
      "ErrorToken"
  ];
  static final Vocabulary VOCABULARY = VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

  @override
  Vocabulary get vocabulary {
    return VOCABULARY;
  }

  @override
  String get grammarFileName => 'StellaParser.g4';

  @override
  List<int> get serializedATN => _serializedATN;

  @override
  ATN getATN() {
   return _ATN;
  }

  StellaParser(TokenStream input) : super(input) {
    interpreter = ParserATNSimulator(this, _ATN, _decisionToDFA, _sharedContextCache);
  }

  Start_ProgramContext start_Program() {
    dynamic _localctx = Start_ProgramContext(context, state);
    enterRule(_localctx, 0, RULE_start_Program);
    try {
      enterOuterAlt(_localctx, 1);
      state = 36;
      _localctx.x = program();
      state = 37;
      match(TOKEN_EOF);
    } on RecognitionException catch (re) {
      _localctx.exception = re;
      errorHandler.reportError(this, re);
      errorHandler.recover(this, re);
    } finally {
      exitRule();
    }
    return _localctx;
  }

  Start_ExprContext start_Expr() {
    dynamic _localctx = Start_ExprContext(context, state);
    enterRule(_localctx, 2, RULE_start_Expr);
    try {
      enterOuterAlt(_localctx, 1);
      state = 39;
      _localctx.x = expression(0);
      state = 40;
      match(TOKEN_EOF);
    } on RecognitionException catch (re) {
      _localctx.exception = re;
      errorHandler.reportError(this, re);
      errorHandler.recover(this, re);
    } finally {
      exitRule();
    }
    return _localctx;
  }

  Start_TypeContext start_Type() {
    dynamic _localctx = Start_TypeContext(context, state);
    enterRule(_localctx, 4, RULE_start_Type);
    try {
      enterOuterAlt(_localctx, 1);
      state = 42;
      _localctx.x = stellatype(0);
      state = 43;
      match(TOKEN_EOF);
    } on RecognitionException catch (re) {
      _localctx.exception = re;
      errorHandler.reportError(this, re);
      errorHandler.recover(this, re);
    } finally {
      exitRule();
    }
    return _localctx;
  }

  ProgramContext program() {
    dynamic _localctx = ProgramContext(context, state);
    enterRule(_localctx, 6, RULE_program);
    int _la;
    try {
      enterOuterAlt(_localctx, 1);
      state = 45;
      languageDecl();
      state = 49;
      errorHandler.sync(this);
      _la = tokenStream.LA(1)!;
      while (_la == TOKEN_Surrogate_id_SYMB_40) {
        state = 46;
        _localctx._extension = extension();
        _localctx.exts.add(_localctx._extension);
        state = 51;
        errorHandler.sync(this);
        _la = tokenStream.LA(1)!;
      }
      state = 55;
      errorHandler.sync(this);
      _la = tokenStream.LA(1)!;
      while (((((_la - 44)) & ~0x3f) == 0 && ((1 << (_la - 44)) & 68728127521) != 0)) {
        state = 52;
        _localctx._declaration = declaration();
        _localctx.decls.add(_localctx._declaration);
        state = 57;
        errorHandler.sync(this);
        _la = tokenStream.LA(1)!;
      }
    } on RecognitionException catch (re) {
      _localctx.exception = re;
      errorHandler.reportError(this, re);
      errorHandler.recover(this, re);
    } finally {
      exitRule();
    }
    return _localctx;
  }

  LanguageDeclContext languageDecl() {
    dynamic _localctx = LanguageDeclContext(context, state);
    enterRule(_localctx, 8, RULE_languageDecl);
    try {
      _localctx = LanguageCoreContext(_localctx);
      enterOuterAlt(_localctx, 1);
      state = 58;
      match(TOKEN_Surrogate_id_SYMB_50);
      state = 59;
      match(TOKEN_Surrogate_id_SYMB_38);
      state = 60;
      match(TOKEN_Surrogate_id_SYMB_1);
    } on RecognitionException catch (re) {
      _localctx.exception = re;
      errorHandler.reportError(this, re);
      errorHandler.recover(this, re);
    } finally {
      exitRule();
    }
    return _localctx;
  }

  ExtensionContext extension() {
    dynamic _localctx = ExtensionContext(context, state);
    enterRule(_localctx, 10, RULE_extension);
    int _la;
    try {
      _localctx = AnExtensionContext(_localctx);
      enterOuterAlt(_localctx, 1);
      state = 62;
      match(TOKEN_Surrogate_id_SYMB_40);
      state = 63;
      match(TOKEN_Surrogate_id_SYMB_64);
      state = 64;
      _localctx._ExtensionName = match(TOKEN_ExtensionName);
      _localctx.extensionNames.add(_localctx._ExtensionName);
      state = 69;
      errorHandler.sync(this);
      _la = tokenStream.LA(1)!;
      while (_la == TOKEN_Surrogate_id_SYMB_0) {
        state = 65;
        match(TOKEN_Surrogate_id_SYMB_0);
        state = 66;
        _localctx._ExtensionName = match(TOKEN_ExtensionName);
        _localctx.extensionNames.add(_localctx._ExtensionName);
        state = 71;
        errorHandler.sync(this);
        _la = tokenStream.LA(1)!;
      }
      state = 72;
      match(TOKEN_Surrogate_id_SYMB_1);
    } on RecognitionException catch (re) {
      _localctx.exception = re;
      errorHandler.reportError(this, re);
      errorHandler.recover(this, re);
    } finally {
      exitRule();
    }
    return _localctx;
  }

  DeclarationContext declaration() {
    dynamic _localctx = DeclarationContext(context, state);
    enterRule(_localctx, 12, RULE_declaration);
    int _la;
    try {
      state = 190;
      errorHandler.sync(this);
      switch (interpreter!.adaptivePredict(tokenStream, 18, context)) {
      case 1:
        _localctx = DeclFunContext(_localctx);
        enterOuterAlt(_localctx, 1);
        state = 77;
        errorHandler.sync(this);
        _la = tokenStream.LA(1)!;
        while (_la == TOKEN_Surrogate_id_SYMB_48) {
          state = 74;
          _localctx._annotation = annotation();
          _localctx.annots.add(_localctx._annotation);
          state = 79;
          errorHandler.sync(this);
          _la = tokenStream.LA(1)!;
        }
        state = 80;
        match(TOKEN_Surrogate_id_SYMB_43);
        state = 81;
        _localctx.name = match(TOKEN_StellaIdent);
        state = 82;
        match(TOKEN_Surrogate_id_SYMB_2);
        state = 91;
        errorHandler.sync(this);
        _la = tokenStream.LA(1)!;
        if (_la == TOKEN_StellaIdent) {
          state = 83;
          _localctx._paramDeclaration = paramDeclaration();
          _localctx.paramDecls.add(_localctx._paramDeclaration);
          state = 88;
          errorHandler.sync(this);
          _la = tokenStream.LA(1)!;
          while (_la == TOKEN_Surrogate_id_SYMB_0) {
            state = 84;
            match(TOKEN_Surrogate_id_SYMB_0);
            state = 85;
            _localctx._paramDeclaration = paramDeclaration();
            _localctx.paramDecls.add(_localctx._paramDeclaration);
            state = 90;
            errorHandler.sync(this);
            _la = tokenStream.LA(1)!;
          }
        }

        state = 93;
        match(TOKEN_Surrogate_id_SYMB_3);
        state = 96;
        errorHandler.sync(this);
        _la = tokenStream.LA(1)!;
        if (_la == TOKEN_Surrogate_id_SYMB_8) {
          state = 94;
          match(TOKEN_Surrogate_id_SYMB_8);
          state = 95;
          _localctx.returnType = stellatype(0);
        }

        state = 107;
        errorHandler.sync(this);
        _la = tokenStream.LA(1)!;
        if (_la == TOKEN_Surrogate_id_SYMB_59) {
          state = 98;
          match(TOKEN_Surrogate_id_SYMB_59);
          state = 99;
          _localctx._stellatype = stellatype(0);
          _localctx.throwTypes.add(_localctx._stellatype);
          state = 104;
          errorHandler.sync(this);
          _la = tokenStream.LA(1)!;
          while (_la == TOKEN_Surrogate_id_SYMB_0) {
            state = 100;
            match(TOKEN_Surrogate_id_SYMB_0);
            state = 101;
            _localctx._stellatype = stellatype(0);
            _localctx.throwTypes.add(_localctx._stellatype);
            state = 106;
            errorHandler.sync(this);
            _la = tokenStream.LA(1)!;
          }
        }

        state = 109;
        match(TOKEN_Surrogate_id_SYMB_4);
        state = 113;
        errorHandler.sync(this);
        _la = tokenStream.LA(1)!;
        while (((((_la - 44)) & ~0x3f) == 0 && ((1 << (_la - 44)) & 68728127521) != 0)) {
          state = 110;
          _localctx._declaration = declaration();
          _localctx.localDecls.add(_localctx._declaration);
          state = 115;
          errorHandler.sync(this);
          _la = tokenStream.LA(1)!;
        }
        state = 116;
        match(TOKEN_Surrogate_id_SYMB_56);
        state = 117;
        _localctx.returnExpr = expression(0);
        state = 118;
        match(TOKEN_Surrogate_id_SYMB_5);
        break;
      case 2:
        _localctx = DeclFunGenericContext(_localctx);
        enterOuterAlt(_localctx, 2);
        state = 123;
        errorHandler.sync(this);
        _la = tokenStream.LA(1)!;
        while (_la == TOKEN_Surrogate_id_SYMB_48) {
          state = 120;
          _localctx._annotation = annotation();
          _localctx.annots.add(_localctx._annotation);
          state = 125;
          errorHandler.sync(this);
          _la = tokenStream.LA(1)!;
        }
        state = 126;
        match(TOKEN_GENERIC);
        state = 127;
        match(TOKEN_Surrogate_id_SYMB_43);
        state = 128;
        _localctx.name = match(TOKEN_StellaIdent);
        state = 129;
        match(TOKEN_Surrogate_id_SYMB_13);
        state = 130;
        _localctx._StellaIdent = match(TOKEN_StellaIdent);
        _localctx.generics.add(_localctx._StellaIdent);
        state = 135;
        errorHandler.sync(this);
        _la = tokenStream.LA(1)!;
        while (_la == TOKEN_Surrogate_id_SYMB_0) {
          state = 131;
          match(TOKEN_Surrogate_id_SYMB_0);
          state = 132;
          _localctx._StellaIdent = match(TOKEN_StellaIdent);
          _localctx.generics.add(_localctx._StellaIdent);
          state = 137;
          errorHandler.sync(this);
          _la = tokenStream.LA(1)!;
        }
        state = 138;
        match(TOKEN_Surrogate_id_SYMB_14);
        state = 139;
        match(TOKEN_Surrogate_id_SYMB_2);
        state = 148;
        errorHandler.sync(this);
        _la = tokenStream.LA(1)!;
        if (_la == TOKEN_StellaIdent) {
          state = 140;
          _localctx._paramDeclaration = paramDeclaration();
          _localctx.paramDecls.add(_localctx._paramDeclaration);
          state = 145;
          errorHandler.sync(this);
          _la = tokenStream.LA(1)!;
          while (_la == TOKEN_Surrogate_id_SYMB_0) {
            state = 141;
            match(TOKEN_Surrogate_id_SYMB_0);
            state = 142;
            _localctx._paramDeclaration = paramDeclaration();
            _localctx.paramDecls.add(_localctx._paramDeclaration);
            state = 147;
            errorHandler.sync(this);
            _la = tokenStream.LA(1)!;
          }
        }

        state = 150;
        match(TOKEN_Surrogate_id_SYMB_3);
        state = 153;
        errorHandler.sync(this);
        _la = tokenStream.LA(1)!;
        if (_la == TOKEN_Surrogate_id_SYMB_8) {
          state = 151;
          match(TOKEN_Surrogate_id_SYMB_8);
          state = 152;
          _localctx.returnType = stellatype(0);
        }

        state = 164;
        errorHandler.sync(this);
        _la = tokenStream.LA(1)!;
        if (_la == TOKEN_Surrogate_id_SYMB_59) {
          state = 155;
          match(TOKEN_Surrogate_id_SYMB_59);
          state = 156;
          _localctx._stellatype = stellatype(0);
          _localctx.throwTypes.add(_localctx._stellatype);
          state = 161;
          errorHandler.sync(this);
          _la = tokenStream.LA(1)!;
          while (_la == TOKEN_Surrogate_id_SYMB_0) {
            state = 157;
            match(TOKEN_Surrogate_id_SYMB_0);
            state = 158;
            _localctx._stellatype = stellatype(0);
            _localctx.throwTypes.add(_localctx._stellatype);
            state = 163;
            errorHandler.sync(this);
            _la = tokenStream.LA(1)!;
          }
        }

        state = 166;
        match(TOKEN_Surrogate_id_SYMB_4);
        state = 170;
        errorHandler.sync(this);
        _la = tokenStream.LA(1)!;
        while (((((_la - 44)) & ~0x3f) == 0 && ((1 << (_la - 44)) & 68728127521) != 0)) {
          state = 167;
          _localctx._declaration = declaration();
          _localctx.localDecls.add(_localctx._declaration);
          state = 172;
          errorHandler.sync(this);
          _la = tokenStream.LA(1)!;
        }
        state = 173;
        match(TOKEN_Surrogate_id_SYMB_56);
        state = 174;
        _localctx.returnExpr = expression(0);
        state = 175;
        match(TOKEN_Surrogate_id_SYMB_5);
        break;
      case 3:
        _localctx = DeclTypeAliasContext(_localctx);
        enterOuterAlt(_localctx, 3);
        state = 177;
        match(TOKEN_Surrogate_id_SYMB_61);
        state = 178;
        _localctx.name = match(TOKEN_StellaIdent);
        state = 179;
        match(TOKEN_Surrogate_id_SYMB_6);
        state = 180;
        _localctx.atype = stellatype(0);
        break;
      case 4:
        _localctx = DeclExceptionTypeContext(_localctx);
        enterOuterAlt(_localctx, 4);
        state = 181;
        match(TOKEN_EXCEPTION);
        state = 182;
        match(TOKEN_Surrogate_id_SYMB_61);
        state = 183;
        match(TOKEN_Surrogate_id_SYMB_6);
        state = 184;
        _localctx.exceptionType = stellatype(0);
        break;
      case 5:
        _localctx = DeclExceptionVariantContext(_localctx);
        enterOuterAlt(_localctx, 5);
        state = 185;
        match(TOKEN_EXCEPTION);
        state = 186;
        match(TOKEN_VARIANT);
        state = 187;
        _localctx.name = match(TOKEN_StellaIdent);
        state = 188;
        match(TOKEN_Surrogate_id_SYMB_7);
        state = 189;
        _localctx.variantType = stellatype(0);
        break;
      }
    } on RecognitionException catch (re) {
      _localctx.exception = re;
      errorHandler.reportError(this, re);
      errorHandler.recover(this, re);
    } finally {
      exitRule();
    }
    return _localctx;
  }
